Frontend: Change dashboard to fixed layout
- Remove @swimlane/ngx-charts package.
- Remove Angular-gridster2 package.
- Refactor illumination of dashboard widgets based on their status. This was necessary in order not to distract the user too much.

Fixes: https://github.com/ceph/bubbles/issues/63

--- a/frontend/src/app/core/dashboard/widgets/events-dashboard-widget/events-dashboard-widget.component.scss
+++ b/frontend/src/app/core/dashboard/widgets/events-dashboard-widget/events-dashboard-widget.component.scss
@@ -2,4 +2,5 @@
 
 .cb-events-dashboard-widget {
   padding: 0 $cb-padding $cb-padding;
+  overflow: scroll;
 }
